--- a/style.css
+++ b/style.css
@@ -9,13 +9,27 @@ html {
 body {
     background-color: #a9a9a9; 
 }
-h1 {
-    font-size: 8rem;
+.container {
+    margin: 0 auto;
+    border-radius: 15px;
 }
-input {
+h1 {
+    font-size: 6.5rem;
+}
+span {
+    font-size: 4.5rem;
+    color: #04175a;
+}
+input, select {
     border: 1px solid #000000;
     height: 60px;
 }
 .address {
     height: 175px;
+    border: 1px solid #000000;
+}
+button {
+    background-color:#ff0000;
+    border: none;
+    margin-top: 65px;
 }
