--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body {
     border-radius: 15px;
 }
 .box {
-    border: 1px solid black;
     max-width: 550px;
     min-width: 400px;
 }
@@ -26,12 +25,14 @@ span {
     color: #04175a;
 }
 input, select {
-    border: 1px solid #000000;
     height: 60px;
+    border: 1px solid #000000;
 }
 .address {
     height: 175px;
-    border: 1px solid #000000;
+}
+.date {
+    font-size: 1.5rem;
 }
 button {
     background-color:#ff0000;
